; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rxrpc/extr_ar-ack.c_rxrpc_propose_ACK.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rxrpc/extr_ar-ack.c_rxrpc_propose_ACK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rxrpc_call = type { i64, i32 }

@rxrpc_ack_priority = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rxrpc_propose_ACK(%struct.rxrpc_call* %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.rxrpc_call*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.rxrpc_call* %0, %struct.rxrpc_call** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i64*, i64** @rxrpc_ack_priority, align 8
  %11 = load i64, i64* %6, align 8
  %12 = getelementptr inbounds i64, i64* %10, i64 %11
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %9, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i64*, i64** @rxrpc_ack_priority, align 8
  %16 = load %struct.rxrpc_call*, %struct.rxrpc_call** %5, align 8
  %17 = getelementptr inbounds %struct.rxrpc_call, %struct.rxrpc_call* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds i64, i64* %15, i64 %18
  %20 = load i64, i64* %19, align 8
  %21 = icmp sgt i64 %14, %20
  br i1 %21, label %22, label %34

22:                                               ; preds = %4
  %23 = load %struct.rxrpc_call*, %struct.rxrpc_call** %5, align 8
  %24 = getelementptr inbounds %struct.rxrpc_call, %struct.rxrpc_call* %23, i32 0, i32 1
  %25 = call i32 @spin_lock_bh(i32* %24)
  %26 = load %struct.rxrpc_call*, %struct.rxrpc_call** %5, align 8
  %27 = load i64, i64* %6, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @__rxrpc_propose_ACK(%struct.rxrpc_call* %26, i64 %27, i32 %28, i32 %29)
  %31 = load %struct.rxrpc_call*, %struct.rxrpc_call** %5, align 8
  %32 = getelementptr inbounds %struct.rxrpc_call, %struct.rxrpc_call* %31, i32 0, i32 1
  %33 = call i32 @spin_unlock_bh(i32* %32)
  br label %34

34:                                               ; preds = %22, %4
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @__rxrpc_propose_ACK(%struct.rxrpc_call*, i64, i32, i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
